Prediction output SOLVED : the output will be provided by the Pytorch predictor in json format. deploy.py has been modified accordingly in predict_fn and output_fn. food-classifier_sagemaker notebook has been modified including a JsonDeserializer in ImgPredictor class.

--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,17 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data uploaded to s3 after 296.4869067668915 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prefix = \"food-classifier\"\n",
     "datafolder = \"../data/s3_train_data\"\n",
@@ -327,7 +319,7 @@
       "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorchvision.models\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mmodels\u001b[39;49;00m\n",
       "\n",
       "\u001b[37m#importing pretrained ResNet for transfer learning\u001b[39;49;00m\n",
-      "ResNetTransfer = models.resnet50(pretrained=\u001b[36mTrue\u001b[39;49;00m) \u001b[37m#.load_state_dict(torch.load(\"resnet50_base.pt\"))\u001b[39;49;00m\n"
+      "ResNetTransfer = models.resnet50(pretrained=\u001b[36mTrue\u001b[39;49;00m) \n"
      ]
     }
    ],
@@ -687,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,21 +737,143 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 154,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sagemaker.predictor import RealTimePredictor\n",
-    "\n",
-    "class ImgPredictor(RealTimePredictor):\n",
-    "    def __init__(self, endpoint_name, sagemaker_session):\n",
-    "        super(ImgPredictor, self).__init__(endpoint_name, sagemaker_session, content_type='application/x-image') #, accept='application/json')"
+    "> ## Checking deploy.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mos\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mpandas\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mpd\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mnumpy\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mnp\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mjson\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch.optim\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36moptim\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch.nn\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mnn\u001b[39;49;00m\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch.utils.data\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mtorchvision\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m datasets\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorchvision.transforms\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mtransforms\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch.optim\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36moptim\u001b[39;49;00m\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mtorch.optim.lr_scheduler\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m ReduceLROnPlateau\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch.nn.functional\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mF\u001b[39;49;00m\n",
+      "\n",
+      "\u001b[37m# imports the model in model.py by name\u001b[39;49;00m\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mmodel\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m ResNetTransfer\n",
+      "\n",
+      "\u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mPIL\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m Image\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mio\u001b[39;49;00m\n",
+      "\n",
+      "\n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32mmodel_fn\u001b[39;49;00m(model_dir):\n",
+      "    \u001b[33m\"\"\"Load the PyTorch model from the `model_dir` directory.\"\"\"\u001b[39;49;00m\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mLoading model.\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "\n",
+      "    \u001b[37m# First, load the parameters used to create the model.\u001b[39;49;00m\n",
+      "    model_info = {}\n",
+      "    model_info_path = os.path.join(model_dir, \u001b[33m'\u001b[39;49;00m\u001b[33mmodel_info.pth\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \u001b[34mwith\u001b[39;49;00m \u001b[36mopen\u001b[39;49;00m(model_info_path, \u001b[33m'\u001b[39;49;00m\u001b[33mrb\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m) \u001b[34mas\u001b[39;49;00m f:\n",
+      "        model_info = torch.load(f)\n",
+      "\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mmodel_info: {}\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m.format(model_info))\n",
+      "\n",
+      "    \u001b[37m# Determine the device and construct the model.\u001b[39;49;00m\n",
+      "    device = torch.device(\u001b[33m\"\u001b[39;49;00m\u001b[33mcuda\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m \u001b[34mif\u001b[39;49;00m torch.cuda.is_available() \u001b[34melse\u001b[39;49;00m \u001b[33m\"\u001b[39;49;00m\u001b[33mcpu\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mUsing device {}.\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m.format(device))\n",
+      "\n",
+      "    model = ResNetTransfer\n",
+      "\n",
+      "    \u001b[37m#freezing the parameters\u001b[39;49;00m\n",
+      "    \u001b[34mfor\u001b[39;49;00m param \u001b[35min\u001b[39;49;00m model.parameters():\n",
+      "        param.requires_grad = \u001b[36mFalse\u001b[39;49;00m\n",
+      "    model.fc = nn.Linear(model.fc.in_features, model_info[\u001b[33m\"\u001b[39;49;00m\u001b[33mn_classes\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m])\n",
+      "\n",
+      "    \u001b[37m# Load the stored model parameters.\u001b[39;49;00m\n",
+      "    model_path = os.path.join(model_dir, \u001b[33m'\u001b[39;49;00m\u001b[33mmodel.pth\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \u001b[34mwith\u001b[39;49;00m \u001b[36mopen\u001b[39;49;00m(model_path, \u001b[33m'\u001b[39;49;00m\u001b[33mrb\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m) \u001b[34mas\u001b[39;49;00m f:\n",
+      "        model.load_state_dict(torch.load(f))\n",
+      "\n",
+      "    \u001b[37m# set to eval mode, could use no_grad\u001b[39;49;00m\n",
+      "    model.to(device).eval()\n",
+      "\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m\"\u001b[39;49;00m\u001b[33mDone loading model.\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \u001b[34mreturn\u001b[39;49;00m model\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32minput_fn\u001b[39;49;00m(request_body, request_content_type):\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m'\u001b[39;49;00m\u001b[33mDeserializing the input data.\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \u001b[34mif\u001b[39;49;00m request_content_type == \u001b[33m'\u001b[39;49;00m\u001b[33mapplication/x-image\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:\n",
+      "        img_arr = np.array(Image.open(io.BytesIO(request_body)))\n",
+      "        img = Image.fromarray(img_arr.astype(\u001b[33m'\u001b[39;49;00m\u001b[33muint8\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m), \u001b[33m'\u001b[39;49;00m\u001b[33mRGB\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "        \n",
+      "        input_tr = transforms.Compose([\n",
+      "                transforms.Resize(\u001b[34m256\u001b[39;49;00m),  \n",
+      "                transforms.FiveCrop(\u001b[34m224\u001b[39;49;00m),\n",
+      "                transforms.Lambda(\u001b[34mlambda\u001b[39;49;00m crops: torch.stack([transforms.Compose([\n",
+      "                transforms.ToTensor(),transforms.Normalize(mean = [\u001b[34m0.485\u001b[39;49;00m, \u001b[34m0.456\u001b[39;49;00m, \u001b[34m0.406\u001b[39;49;00m], std = [\u001b[34m0.229\u001b[39;49;00m, \u001b[34m0.224\u001b[39;49;00m, \u001b[34m0.225\u001b[39;49;00m])])(crop) \u001b[34mfor\u001b[39;49;00m crop \u001b[35min\u001b[39;49;00m crops]))])\n",
+      "        \n",
+      "        data = input_tr(img)\n",
+      "        \n",
+      "        \u001b[34mreturn\u001b[39;49;00m data\n",
+      "    \u001b[34mraise\u001b[39;49;00m \u001b[36mException\u001b[39;49;00m(\u001b[33m'\u001b[39;49;00m\u001b[33mRequested unsupported ContentType in content_type: \u001b[39;49;00m\u001b[33m'\u001b[39;49;00m + content_type)\n",
+      "\n",
+      "    \n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32moutput_fn\u001b[39;49;00m(prediction_output, accept):\n",
+      "    \u001b[34mprint\u001b[39;49;00m(\u001b[33m'\u001b[39;49;00m\u001b[33mSerializing the generated output.\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \n",
+      "    \u001b[34mreturn\u001b[39;49;00m json.dumps({\u001b[33m'\u001b[39;49;00m\u001b[33mclass\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m : prediction_output[\u001b[33m'\u001b[39;49;00m\u001b[33mclass\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m], \u001b[33m'\u001b[39;49;00m\u001b[33mprob\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m : \u001b[36mlist\u001b[39;49;00m(prediction_output[\u001b[33m'\u001b[39;49;00m\u001b[33mprob\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m])}), accept \n",
+      "\n",
+      "\n",
+      "\u001b[34mdef\u001b[39;49;00m \u001b[32mpredict_fn\u001b[39;49;00m(input_data, model):\n",
+      "    \u001b[37m# load the image and return the predicted food\u001b[39;49;00m\n",
+      "    device = torch.device(\u001b[33m'\u001b[39;49;00m\u001b[33mcuda\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m \u001b[34mif\u001b[39;49;00m torch.cuda.is_available() \u001b[34melse\u001b[39;49;00m \u001b[33m'\u001b[39;49;00m\u001b[33mcpu\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
+      "    \n",
+      "    pred_output = model(input_data.to(device))\n",
+      "    scores = pred_output.mean(\u001b[34m0\u001b[39;49;00m)\n",
+      "    \n",
+      "    output = torch.argmax(scores).to(\u001b[33m\"\u001b[39;49;00m\u001b[33mcpu\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m).item()\n",
+      "    prob = F.softmax(scores,dim=\u001b[34m0\u001b[39;49;00m).to(\u001b[33m\"\u001b[39;49;00m\u001b[33mcpu\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m).data.numpy()\n",
+      "    \n",
+      "    result = {\u001b[33m'\u001b[39;49;00m\u001b[33mclass\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m: \u001b[36mfloat\u001b[39;49;00m(output), \u001b[33m'\u001b[39;49;00m\u001b[33mprob\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:[\u001b[36mfloat\u001b[39;49;00m(i) \u001b[34mfor\u001b[39;49;00m i \u001b[35min\u001b[39;49;00m prob]}\n",
+      "    \n",
+      "    \u001b[34mreturn\u001b[39;49;00m result\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pygmentize pytorch_source/deploy.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.predictor import RealTimePredictor, json_deserializer\n",
+    "\n",
+    "class ImgPredictor(RealTimePredictor):\n",
+    "    def __init__(self, endpoint_name, sagemaker_session):\n",
+    "        super(ImgPredictor, self).__init__(endpoint_name, sagemaker_session, content_type='application/x-image', \n",
+    "                                           deserializer = json_deserializer ,accept='application/json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,52 +888,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------!"
+      "-----------------!"
      ]
     }
    ],
    "source": [
     "predictor = estimator.deploy(instance_type='ml.p2.xlarge', initial_instance_count=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#predictor = sagemaker.predictor.RealTimePredictor(\n",
-    "#    endpoint='sagemaker-pytorch-2020-03-05-13-01-45-046',\n",
-    "#    sagemaker_session = sagemaker_session,\n",
-    "#    content_type='application/x-npy',\n",
-    "#    accept='application/x-npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ImgPredictor at 0x7f547994b208>"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictor"
    ]
   },
   {
@@ -831,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +956,7 @@
        "           )"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +977,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/test_img/beef_carpaccio/100853.jpg'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.imgs[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'beef_carpaccio': 0,\n",
+       " 'carrot_cake': 1,\n",
+       " 'escargots': 2,\n",
+       " 'ramen': 3,\n",
+       " 'strawberry_shortcake': 4}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.class_to_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,22 +1050,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bytes"
+       "4.0"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(a)"
+    "a['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.delete_endpoint()"
    ]
   },
   {
@@ -1091,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1235,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-46ef5e5e8b7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_endpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-21-46ef5e5e8b7c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete_endpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: 'PyTorchModel' object has no attribute 'delete_endpoint'"
      ]
     }
@@ -1109,6 +1243,13 @@
    "source": [
     "estimator.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
