--- a/food-classifier_sagemaker.ipynb
+++ b/food-classifier_sagemaker.ipynb
@@ -142,10 +142,10 @@
    ],
    "source": [
     "#create folder with data to upload to s3\n",
-    "%mkdir ../data/s3_train_data\n",
-    "%mkdir ../data/s3_train_data/train_img \n",
-    "%mkdir ../data/s3_train_data/valid_img\n",
-    "%mkdir ../data/test_img\n",
+    "%mkdir ../data/s3_train_test_data\n",
+    "%mkdir ../data/s3_train_test_data/train_img \n",
+    "%mkdir ../data/s3_train_test_data/valid_img\n",
+    "%mkdir ../data/s3_train_test_data/test_img\n",
     "\n",
     "train_meta = train_meta[selection].iloc[:train_meta.shape[0] - val_split_idx]\n",
     "\n",
@@ -155,13 +155,13 @@
     "\n",
     "#Setting train, validation and test set target folder\n",
     "#target folder - train\n",
-    "trainfolder = \"../data/s3_train_data/train_img/\"\n",
+    "trainfolder = \"../data/s3_train_test_data/train_img/\"\n",
     "\n",
     "#target folder - validation\n",
-    "validfolder = \"../data/s3_train_data/valid_img/\"\n",
+    "validfolder = \"../data/s3_train_test_data/valid_img/\"\n",
     "\n",
     "#target folder -test\n",
-    "testfolder = \"../data/test_img/\"\n",
+    "testfolder = \"../data/s3_train_test_data/test_img/\"\n",
     "\n",
     "print(\"{} images used for training\".format(train_meta.shape[0]*train_meta.shape[1]))\n",
     "print(\"{} images used for validation\".format(valid_meta.shape[0]*valid_meta.shape[1]))\n",
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "prefix = \"food-classifier\"\n",
-    "datafolder = \"../data/s3_train_data\"\n",
+    "datafolder = \"../data/s3_train_test_data\"\n",
     "# upload all data to S3\n",
     "\n",
     "#this is slow!\n",
@@ -1226,9 +1226,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1240,7 +1240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
