--- a/food-classifier_sagemaker_train.ipynb
+++ b/food-classifier_sagemaker_train.ipynb
@@ -746,6 +746,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-eu-central-1-515611759963/food-classifier/'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "import sagemaker\n",
+    "\n",
+    "# S3 bucket to load\n",
+    "bucket = \"sagemaker-eu-central-1-515611759963\"\n",
+    "\n",
+    "prefix = \"food-classifier\"\n",
+    "\n",
+    "train_test_folder = 's3://{}/{}/'.format(bucket, prefix)\n",
+    "\n",
+    "# session and role\n",
+    "sagemaker_session = sagemaker.Session(default_bucket=bucket)\n",
+    "role = sagemaker.get_execution_role()\n",
+    "\n",
+    "train_test_folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Upload training and testing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#datafolder = \"../data/s3_train_test_data\"\n",
+    "# upload all data to S3\n",
+    "\n",
+    "#this is slow!\n",
+    "#start = time.time()\n",
+    "#input_data = sagemaker_session.upload_data(path=datafolder, bucket=bucket, key_prefix=prefix)\n",
+    "#end = time.time()\n",
+    "\n",
+    "#print(\"Data uploaded to s3 after {} seconds\".format(end - start))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -754,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,28 +852,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-03-07 08:57:38 Starting - Starting the training job...\n",
-      "2020-03-07 08:57:39 Starting - Launching requested ML instances......\n",
-      "2020-03-07 08:58:40 Starting - Preparing the instances for training......\n",
-      "2020-03-07 09:00:03 Downloading - Downloading input data......\n",
-      "2020-03-07 09:00:57 Training - Downloading the training image..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
+      "2020-03-08 17:17:19 Starting - Starting the training job...\n",
+      "2020-03-08 17:17:21 Starting - Launching requested ML instances...\n",
+      "2020-03-08 17:18:18 Starting - Preparing the instances for training.........\n",
+      "2020-03-08 17:19:37 Downloading - Downloading input data......\n",
+      "2020-03-08 17:20:40 Training - Downloading the training image..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
       "\u001b[34mbash: no job control in this shell\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:20,312 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:20,337 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
-      "\n",
-      "2020-03-07 09:01:19 Training - Training image download completed. Training in progress.\u001b[34m2020-03-07 09:01:23,359 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:23,591 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:00,643 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:00,668 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:01,293 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:01,512 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
       "\u001b[34mGenerating setup.py\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:23,591 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:23,591 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:23,592 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:01,512 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:01,512 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:21:01,512 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
       "\u001b[34m/usr/bin/python -m pip install . -r requirements.txt\u001b[0m\n",
       "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[34mRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 1)) (1.16.4)\u001b[0m\n",
@@ -823,18 +881,18 @@
       "\u001b[34mRequirement already satisfied: torchvision in /usr/local/lib/python3.6/dist-packages (from -r requirements.txt (line 4)) (0.3.0)\u001b[0m\n",
       "\u001b[34mRequirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas->-r requirements.txt (line 2)) (2.8.0)\u001b[0m\n",
       "\u001b[34mRequirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->-r requirements.txt (line 2)) (2019.2)\u001b[0m\n",
-      "\u001b[34mRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision->-r requirements.txt (line 4)) (1.12.0)\u001b[0m\n",
       "\u001b[34mRequirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision->-r requirements.txt (line 4)) (6.0.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision->-r requirements.txt (line 4)) (1.12.0)\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: train\n",
       "  Running setup.py bdist_wheel for train: started\n",
       "  Running setup.py bdist_wheel for train: finished with status 'done'\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-d2ndr2w3/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-h4sifoh1/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
       "\u001b[34mSuccessfully built train\u001b[0m\n",
       "\u001b[34mInstalling collected packages: train\u001b[0m\n",
       "\u001b[34mSuccessfully installed train-1.0.0\u001b[0m\n",
       "\u001b[34mYou are using pip version 18.1, however version 20.0.2 is available.\u001b[0m\n",
       "\u001b[34mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:01:25,555 sagemaker-containers INFO     Invoking user script\n",
+      "\u001b[34m2020-03-08 17:21:03,288 sagemaker-containers INFO     Invoking user script\n",
       "\u001b[0m\n",
       "\u001b[34mTraining Env:\n",
       "\u001b[0m\n",
@@ -866,11 +924,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"sagemaker-pytorch-2020-03-07-08-57-37-920\",\n",
+      "    \"job_name\": \"sagemaker-pytorch-2020-03-08-17-17-19-239\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-07-08-57-37-920/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-08-17-17-19-239/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"train\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -909,8 +967,8 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=1\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-07-08-57-37-920/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"training\":\"/opt/ml/input/data/training\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"batch_size\":64,\"img_input_size\":224,\"img_short_side_resize\":256,\"n_classes\":6,\"n_epochs\":3,\"num_workers\":16},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-03-07-08-57-37-920\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-07-08-57-37-920/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-08-17-17-19-239/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"training\":\"/opt/ml/input/data/training\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"batch_size\":64,\"img_input_size\":224,\"img_short_side_resize\":256,\"n_classes\":6,\"n_epochs\":3,\"num_workers\":16},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-03-08-17-17-19-239\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-eu-central-1-515611759963/sagemaker-pytorch-2020-03-08-17-17-19-239/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ARGS=[\"--batch_size\",\"64\",\"--img_input_size\",\"224\",\"--img_short_side_resize\",\"256\",\"--n_classes\",\"6\",\"--n_epochs\",\"3\",\"--num_workers\",\"16\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAINING=/opt/ml/input/data/training\u001b[0m\n",
@@ -927,29 +985,32 @@
       "\u001b[34m/usr/bin/python -m train --batch_size 64 --img_input_size 224 --img_short_side_resize 256 --n_classes 6 --n_epochs 3 --num_workers 16\n",
       "\n",
       "\u001b[0m\n",
-      "\u001b[34mUsing device cuda.\u001b[0m\n",
+      "\n",
+      "2020-03-08 17:20:59 Training - Training image download completed. Training in progress.\u001b[34mUsing device cuda.\u001b[0m\n",
       "\u001b[34mUsing Tesla K80\u001b[0m\n",
       "\u001b[34mGet train data loader.\u001b[0m\n",
-      "\u001b[34mEpoch 1 done in 69.91 seconds at 9:2:44. #011Training Loss: 1.466 #011Validation Loss: 1.063\u001b[0m\n",
-      "\u001b[34mEpoch 2 done in 69.65 seconds at 9:3:53. #011Training Loss: 1.033 #011Validation Loss: 0.762\u001b[0m\n",
-      "\u001b[34mEpoch 3 done in 69.69 seconds at 9:5:3. #011Training Loss: 0.848 #011Validation Loss: 0.631\u001b[0m\n",
-      "\u001b[34m3 epochs trained in 209.252 seconds. \u001b[0m\n",
+      "\u001b[34mEpoch 1 done in 71.25 seconds at 17:22:26. #011Training Loss: 1.466 #011Validation Loss: 1.063\u001b[0m\n",
+      "\u001b[34mEpoch 2 done in 71.19 seconds at 17:23:37. #011Training Loss: 1.033 #011Validation Loss: 0.762\u001b[0m\n",
+      "\u001b[34mEpoch 3 done in 71.77 seconds at 17:24:49. #011Training Loss: 0.848 #011Validation Loss: 0.631\u001b[0m\n",
+      "\u001b[34m3 epochs trained in 214.220 seconds. \u001b[0m\n",
       "\u001b[34mBest model obtained at epoch 3 with minimum validation loss : 0.631\u001b[0m\n",
       "\u001b[34mTest Loss: 0.555235\n",
       "\n",
       "\u001b[0m\n",
       "\u001b[34mTest Accuracy: 87% (1099/1250)\u001b[0m\n",
-      "\u001b[34m2020-03-07 09:06:04,341 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\u001b[34m2020-03-08 17:25:52,499 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
       "\n",
-      "2020-03-07 09:06:39 Uploading - Uploading generated training model\n",
-      "2020-03-07 09:06:39 Completed - Training job completed\n",
-      "Training seconds: 396\n",
-      "Billable seconds: 396\n"
+      "2020-03-08 17:26:03 Uploading - Uploading generated training model\n",
+      "2020-03-08 17:26:49 Completed - Training job completed\n",
+      "Training seconds: 432\n",
+      "Billable seconds: 432\n"
      ]
     }
    ],
    "source": [
-    "estimator.fit({'training': input_data})"
+    "#estimator.fit({'training': input_data})\n",
+    "\n",
+    "estimator.fit({'training': train_test_folder}) #to use already loaded data"
    ]
   },
   {
@@ -961,9 +1022,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------!"
+     ]
+    }
+   ],
    "source": [
     "#predictor = estimator.deploy(instance_type='ml.p2.xlarge', initial_instance_count=1)"
    ]
@@ -977,19 +1046,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#predictor.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_pytorch_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1001,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
