latest Sagemaker update before starting on Flask deployment

--- a/food-classifier_sagemaker_train.ipynb
+++ b/food-classifier_sagemaker_train.ipynb
@@ -672,7 +672,32 @@
       "\u001b[34mEpoch 2 done in 1325.46 seconds at 11:29:1. #011Training Loss: 2.590 #011Validation Loss: 1.999\u001b[0m\n",
       "\u001b[34mEpoch 3 done in 1329.02 seconds at 11:51:10. #011Training Loss: 2.405 #011Validation Loss: 1.906\u001b[0m\n",
       "\u001b[34mEpoch 4 done in 1328.37 seconds at 12:13:19. #011Training Loss: 2.329 #011Validation Loss: 1.795\u001b[0m\n",
-      "\u001b[34mEpoch 5 done in 1332.61 seconds at 12:35:31. #011Training Loss: 2.273 #011Validation Loss: 1.756\u001b[0m\n"
+      "\u001b[34mEpoch 5 done in 1332.61 seconds at 12:35:31. #011Training Loss: 2.273 #011Validation Loss: 1.756\u001b[0m\n",
+      "\u001b[34mEpoch 6 done in 1329.89 seconds at 12:57:41. #011Training Loss: 2.235 #011Validation Loss: 1.726\u001b[0m\n",
+      "\u001b[34mEpoch 7 done in 1330.60 seconds at 13:19:52. #011Training Loss: 2.211 #011Validation Loss: 1.679\u001b[0m\n",
+      "\u001b[34mEpoch 8 done in 1332.14 seconds at 13:42:4. #011Training Loss: 2.178 #011Validation Loss: 1.681\u001b[0m\n",
+      "\u001b[34mEpoch 9 done in 1331.37 seconds at 14:4:15. #011Training Loss: 2.164 #011Validation Loss: 1.657\u001b[0m\n",
+      "\u001b[34mEpoch 10 done in 1333.87 seconds at 14:26:29. #011Training Loss: 2.148 #011Validation Loss: 1.660\u001b[0m\n",
+      "\u001b[34mEpoch 11 done in 1335.84 seconds at 14:48:45. #011Training Loss: 2.132 #011Validation Loss: 1.623\u001b[0m\n",
+      "\u001b[34mEpoch 12 done in 1333.44 seconds at 15:10:59. #011Training Loss: 2.111 #011Validation Loss: 1.620\u001b[0m\n",
+      "\u001b[34mEpoch 13 done in 1332.97 seconds at 15:33:12. #011Training Loss: 2.096 #011Validation Loss: 1.575\u001b[0m\n",
+      "\u001b[34mEpoch 14 done in 1331.64 seconds at 15:55:23. #011Training Loss: 2.084 #011Validation Loss: 1.591\u001b[0m\n",
+      "\u001b[34mEpoch 15 done in 1334.68 seconds at 16:17:38. #011Training Loss: 2.079 #011Validation Loss: 1.561\u001b[0m\n",
+      "\u001b[34mEpoch 16 done in 1334.64 seconds at 16:39:53. #011Training Loss: 2.074 #011Validation Loss: 1.589\u001b[0m\n",
+      "\u001b[34mEpoch 17 done in 1335.33 seconds at 17:2:8. #011Training Loss: 2.058 #011Validation Loss: 1.557\u001b[0m\n",
+      "\u001b[34mEpoch 18 done in 1335.32 seconds at 17:24:23. #011Training Loss: 2.051 #011Validation Loss: 1.547\u001b[0m\n",
+      "\u001b[34mEpoch 19 done in 1336.11 seconds at 17:46:39. #011Training Loss: 2.032 #011Validation Loss: 1.545\u001b[0m\n",
+      "\u001b[34mEpoch 20 done in 1334.28 seconds at 18:8:54. #011Training Loss: 2.045 #011Validation Loss: 1.519\u001b[0m\n",
+      "\u001b[34mEpoch 21 done in 1336.20 seconds at 18:31:10. #011Training Loss: 2.030 #011Validation Loss: 1.516\u001b[0m\n",
+      "\u001b[34mEpoch 22 done in 1334.40 seconds at 18:53:24. #011Training Loss: 2.022 #011Validation Loss: 1.524\u001b[0m\n",
+      "\u001b[34mEpoch 23 done in 1337.59 seconds at 19:15:42. #011Training Loss: 2.005 #011Validation Loss: 1.519\u001b[0m\n",
+      "\u001b[34mEpoch 24 done in 1336.18 seconds at 19:37:58. #011Training Loss: 2.009 #011Validation Loss: 1.500\u001b[0m\n",
+      "\u001b[34mEpoch 25 done in 1334.82 seconds at 20:0:13. #011Training Loss: 1.994 #011Validation Loss: 1.491\u001b[0m\n",
+      "\u001b[34mEpoch 26 done in 1337.30 seconds at 20:22:30. #011Training Loss: 2.003 #011Validation Loss: 1.491\u001b[0m\n",
+      "\u001b[34mEpoch 27 done in 1334.70 seconds at 20:44:45. #011Training Loss: 1.981 #011Validation Loss: 1.477\u001b[0m\n",
+      "\u001b[34mEpoch 28 done in 1337.31 seconds at 21:7:2. #011Training Loss: 1.986 #011Validation Loss: 1.482\u001b[0m\n",
+      "\u001b[34mEpoch 29 done in 1339.07 seconds at 21:29:21. #011Training Loss: 1.974 #011Validation Loss: 1.483\u001b[0m\n",
+      "\u001b[34mEpoch 30 done in 1336.91 seconds at 21:51:38. #011Training Loss: 1.976 #011Validation Loss: 1.482\u001b[0m\n"
      ]
     }
    ],
