Resume training info added to train functions

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected categories : ramen, carrot_cake\n"
+      "Selected categories : ramen, carrot_cake, beef_carpaccio, strawberry_shortcake, escargots, donuts, croque_madame, cheesecake, caprese_salad, sashimi, oysters, caesar_salad, pho, hot_and_sour_soup, beef_tartare, creme_brulee, cup_cakes, miso_soup, pork_chop, paella, club_sandwich, spaghetti_carbonara, red_velvet_cake, shrimp_and_grits, hamburger, hummus, apple_pie, takoyaki, chicken_wings, fried_calamari, chicken_quesadilla, greek_salad, cannoli, frozen_yogurt, fried_rice, edamame, beet_salad, steak, ice_cream, onion_rings, ceviche, bruschetta, pad_thai, filet_mignon, pulled_pork_sandwich, prime_rib, garlic_bread, panna_cotta, clam_chowder, spaghetti_bolognese, bread_pudding, risotto, tiramisu, gnocchi, crab_cakes, samosa, eggs_benedict, scallops, ravioli, breakfast_burrito, chocolate_cake, lasagna, seaweed_salad, french_onion_soup, tuna_tartare, bibimbap, french_fries, guacamole, pancakes, macarons, grilled_salmon, chicken_curry, sushi, peking_duck, mussels, tacos, beignets, pizza, grilled_cheese_sandwich, omelette, dumplings, baby_back_ribs, spring_rolls, hot_dog, chocolate_mousse, fish_and_chips, macaroni_and_cheese, baklava, foie_gras, deviled_eggs, cheese_plate, lobster_bisque, huevos_rancheros, nachos, french_toast, waffles, gyoza, churros, lobster_roll_sandwich, falafel, poutine\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
     "folders_sorted = sorted(os.listdir(data_dir))\n",
     "\n",
     "#number of categories to randomly select\n",
-    "nc = 2\n",
+    "nc = 101\n",
     "\n",
     "#selecting a randomn subset of categories\n",
     "seed(42)\n",
@@ -127,9 +127,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1200 images used for training\n",
-      "300 images used for validation\n",
-      "500 images used for testing\n"
+      "60600 images used for training\n",
+      "15150 images used for validation\n",
+      "25250 images used for testing\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,18 +595,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 done in 53.95 seconds at 18:13:35. \tTraining Loss: 0.339 \tValidation Loss: 0.240\n",
-      "Epoch 2 done in 55.40 seconds at 18:14:31. \tTraining Loss: 0.297 \tValidation Loss: 0.199\n",
-      "Epoch 3 done in 61.95 seconds at 18:15:33. \tTraining Loss: 0.290 \tValidation Loss: 0.180\n",
-      "3 epochs trained in 171.831 seconds. \n",
-      "Best model obtained at epoch 3 with minimum validation loss : 0.180\n"
+      "Epoch 1 done in 2390.76 seconds at 20:49:53. \tTraining Loss: 3.385 \tValidation Loss: 2.363\n",
+      "Epoch 2 done in 2530.60 seconds at 21:32:4. \tTraining Loss: 2.595 \tValidation Loss: 2.037\n",
+      "Epoch 3 done in 2520.86 seconds at 22:14:5. \tTraining Loss: 2.406 \tValidation Loss: 1.880\n",
+      "3 epochs trained in 7443.216 seconds. \n",
+      "Best model obtained at epoch 3 with minimum validation loss : 1.880\n"
      ]
     }
    ],
@@ -620,7 +620,7 @@
     "                       optimizer_transfer, \n",
     "                       criterion_transfer, \n",
     "                       device, \n",
-    "                       'models/model_try_retrain_{}cat.pt'.format(nc), \n",
+    "                       'models/model_res_{}cat.pt'.format(nc), \n",
     "                       fivecrop = \"mean\", \n",
     "                       lr_scheduler = scheduler_transfer)"
    ]
